# django_project

prod/: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/mysite/: settings.py
