[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Petr Baikov <petr.bajjkov@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
django-rest-framework = "^0.1.0"
django-filter = "^24.3"
django-debug-toolbar = "^4.4.6"
djangorestframework = "^3.15.2"
gunicorn = "^23.0.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
